--- a/.github/workflows/ci.yaml
+++ b/.github/workflows/ci.yaml
@@ -9,7 +9,7 @@ jobs:
       matrix:
         os: [ubuntu-latest, windows-latest, macos-latest]
     env:
-      RUSTFLAGS: -D warnings
+#      RUSTFLAGS: -D warnings
       CARGO_INCREMENTAL: 0
       RUN_SLOW_TESTS: 1
       RUSTUP_MAX_RETRIES: 10
