--- a/core/Cargo.toml
+++ b/core/Cargo.toml
@@ -11,6 +11,7 @@ harness = false
 [dependencies]
 uuid = { version = "0.8", features = ["serde", "v4"] }
 bincode = { version = "2.0.0-beta.3", features = ["serde"] }
+block_chunk = { path = "../libs/block_chunk" }
 
 [dev-dependencies]
 flate2 = "1.0.22"
