--- a/voxelcraft_mod/Cargo.toml
+++ b/voxelcraft_mod/Cargo.toml
@@ -9,3 +9,4 @@ async-trait = "0.1.52"
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
 futures = "0.3.21"
 voxelcraft_core = { path = "../core" }
+block_chunk = { path = "../libs/block_chunk" }
