--- a/voxelcraft_server/Cargo.toml
+++ b/voxelcraft_server/Cargo.toml
@@ -10,8 +10,9 @@ flate2 = "1.0.22"
 serde = "1.0.136"
 serde_json = "1.0.79"
 bincode = { version = "2.0.0-beta.3", features = ["serde"] }
-tokio = { version = "1.17.0", features = ["rt"] }
+tokio = { version = "1.17.0", features = ["rt", "sync", "time"] }
 log = "0.4.14"
 uuid = { version = "0.8.2", features = ["serde", "v4"] }
 voxelcraft_mod = { path = "../voxelcraft_mod" }
 voxelcraft_core = { path = "../core" }
+block_chunk = { path = "../libs/block_chunk" }
