add ios build setup

--- a/packs/test/Cargo.toml
+++ b/packs/test/Cargo.toml
@@ -3,5 +3,9 @@ name = "packs_test"
 version = "0.0.1"
 edition = "2021"
 
+
+[lib]
+crate-type = ["staticlib", "lib"]
+
 [dependencies]
 voxelcraft_mod = { path = "../../voxelcraft_mod" }
